source/06/cccr-ext-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: cccr-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31111
  selector:
    app: cccr
