source/06/cccr-ses.yml
apiVersion: v1
kind: Service
metadata:
  name: cccr
spec:
#동일한 요청에 동일한 IP로 가게 하는것
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: cccr
